--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">BabbelStudy</string>
+
+    <string name="game_description">Game description</string>
+
+    <string name="game_on">On</string>
+    <string name="game_over">Game Over</string>
+    <string name="no_data_available">No data is available!</string>
+
 </resources>
