--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources>
     <string name="app_name">BabbelStudy</string>
 
-    <string name="game_description">Game description</string>
+    <string name="game_description">The player will have to choose if the falling word is the correct spanish
+        translation or a
+        wrong translation
+    </string>
 
     <string name="game_on">On</string>
     <string name="game_over">Game Over</string>
