--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="game_description">The player will have to choose if the falling word is the correct spanish
         translation or a
-        wrong translation. \n In order to choose another question player can press left buttons on the panel.
+        wrong translation. \n In order to choose another question player can press buttons on the left panel.
     </string>
 
     <string name="game_on">On</string>
