--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BabbelStudy</string>
+    <string name="app_name">Falling Words</string>
 
     <string name="game_description">The player will have to choose if the falling word is the correct spanish
         translation or a
